# Cyberova

./: .gitignore  HandDetection  README.md  xox-game.py
Asude_Aslan/: hand_detection.py  xox.py
Asude_Aslan/opencv/: 1.py  2(video_islemleri).py  3.py  4(tuval_olusturma).py  5(goruntu_olusturma).py
Burcu_yasaner/: xox_game.ipynb
ERC_25/Model_Training/: aruco.py  ceter.py  data.yaml  detect.py  modelTrain.py  predict_cam.py
Fatih_Bektaş/: TicTacTo.py
Fatih_Bektaş/OpenCV/: 1.1Image Reading.py  1.2 Greyscale Image.py  1.3 Resizing Image.py  1.4 Arithmetic Operation.py  1.5 Image Blurring.py  1.6 Drawing Circle.py  2.1 Finger Counter.py  tempCodeRunnerFile.py
Furkan_Poluc/: xox.py
Furkan_Poluc/opencv/: calismalarim.py  untitled0.py
Ismail_Atasoy/: FINGER_COUNTER.py  XOX.py  body_detect.py  canny_kenar_yakalama.py  finger_counter.py
Ismail_Atasoy/ROS2/: lifecycle_example.py  turtle_controller.py
Ismail_Atasoy/opencv/: center of shape.py  clean_background.py  contour.py  convex_hull.py  corners_method.py  exercices.py  eye_detection.py  face_detection.py  mask_the_view.py  set_color_with_trackbar.py  shape_detection.py
Ismail_Atasoy/raporlar/: rapor1.md  rapor2.md  rapor3.md
Kadir_Dönmez/: XOX  XOX OYUN
Meleksu_Buyuk/: hand_detection.py
Meleksu_Buyuk/XOXgame/: main.py
Melisa_Mehenktas/: handdetection.py  xox.py
Sevilay_Celik/: xox.python
Sevilay_Celik/opencv/: 1.pyth.py  2.pyth.py  3.pyth.py  4.pyth.py  5.pyth.py
Seyidenaz_Erdogan/: XOX Game.pyproj  XOX Game.sln  XOX_Game.py
Seyidenaz_Erdogan/Opencv/: README.md  ResimCizgiTespiti  kameraAcma  resimAracTespiti  resimGozTespiti  resimOkuma  resimOzellikler  resimVucutAlgılama  resimYazma  resimYuzTespiti  resimlerArasındakiFark  videoAcma  videoAracTespiti  videoCizgiTespiti  videoGozTespiti  videoKaydetme  videoVucutAlgılama  (+4 more)
Yasar_Karacam/: OpenCV  X O X
Zeynep_kan/: XOX.py
damla nisa çakmak/: rapor.md  xox.py
esra_iclal_bogar/: xox.py
hilal_ates/: rapor  xox.py
install/: local_setup.sh  setup.sh
install/robotaksi_description/share/robotaksi_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotaksi_description/share/robotaksi_description/config/: diff_drive_controller.yaml
install/robotaksi_description/share/robotaksi_description/launch/: gazebo.launch.py  gazebo_no_gui.launch.py  gazebo_only.launch.py  gazebo_with_controllers.launch.py  sensors_test.launch.py  teleop.launch.py
install/robotaksi_description/share/robotaksi_description/meshes/: right_back_wheel_1.stl  right_front_wheel_1.stl
install/robotaksi_description/share/robotaksi_description/urdf/: d435_camera.xacro  imu.xacro  materials.xacro  robotaksi.gazebo  robotaksi.xacro
log/: latest_build
mevre dilay sevtekin/: Fınger_counter.py  README.md  opencv  xox.py
src/last_smooth_controller/: README.md  package.xml  setup.py
src/last_smooth_controller/config/: slam_config_advanced.yaml  slam_config_simple.yaml  slam_rviz.rviz  smooth_controller.rviz
src/last_smooth_controller/last_smooth_controller/: pid_controller.py
src/last_smooth_controller/last_smooth_controller/scripts/: set_initial_pose.py
src/last_smooth_controller/launch/: gazebo_slam.launch.py
(+168 files in other folders)
