<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>last_smooth_controller</name>
  <version>0.0.0</version>
  <description>6 tekerlekli robot için pürüzsüz hareket controller paketi. PID kontrol, velocity filtering ve motion planning özellikleri içerir.</description>
  <maintainer email="gunes@todo.todo">gunes</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>numpy</depend>
  <depend>xacro</depend>
  
  <!-- Gazebo ve simülasyon bağımlılıkları -->
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  
  <!-- SLAM ve Navigation bağımlılıkları -->
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>
  
  <!-- Teleop ve görselleştirme -->
  <depend>teleop_twist_keyboard</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  
  <!-- last_description paketi ile entegrasyon -->
  <depend>last_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
