<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>robotaksi_description</name>
  <version>0.0.0</version>
<description>The robotaksi_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>teleop_twist_keyboard</depend>
  
  <!-- Sensor dependencies -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
